# link-shortener

./: README.md  makefile  pyproject.toml
config/: settings.py  urls.py
links/: admin.py  models.py  urls.py  views.py
links/static_src/: package-lock.json  package.json
links/templates/links/: base.html  index.html
linkss/: urls.py  views.py
linkss/migrations/: 0001_initial.py
linkss/templates/links/: _base.html  index.html
